Respect settings and cli parameters

Separate 'if' for doCopyToClipboard() and doSave(), since one can have both active. Adjusted the corresponding notifications.

BUG: 425573
BUG: 422148